<resources>
    <string name="app_name">OnGoUser</string>
    <string name="create"><u>Create Account</u></string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signin"><u>Sign In</u></string>
    <string name="turn_on">Turn on</string>
    <string name="gps_disable">GPS is disabled in your device. Please turn on location of your device</string>
    <string name="terms"><u>I accept terms &amp; conditions</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_available">Not Available</string>
    <string name="please_enter_email">Enter email</string>
    <string name="please_enter_password">Enter password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="password_reset_instruction">Please enter your registered email,so we can send your password reset instructions.</string>
    <string name="order">Orders</string>
    <string name="current">Current</string>
    <string name="past">Past</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="new_orders">New Orders</string>
    <string name="in_progress">In Progress</string>
    <string name="ready_for_delivery">Ready for Delivery</string>
    <string name="ready_for_pickup">Ready for Pickup</string>
    <string name="tom_martain">Tom Martain</string>
    <string name="order_number_123456">Order number: 123456</string>
    <string name="paid_online">Paid Online</string>
    <string name="return_complete">Return Complete</string>
    <string name="today">Today</string>
    <string name="ok">OK</string>
    <string name="send">Send</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="phone">Phone</string>
    <string name="_11_ruby_sector_101">11 Ruby, Sector 101</string>
    <string name="items_on_board_for_delivery">Items on board for delivery</string>
    <string name="complete_delivery">Complete Delivery</string>
    <string name="_2_pm_4_pm">2 PM-4 PM</string>
    <string name="scheduled_for_later">Scheduled for later</string>
    <string name="barcode_scanner">Barcode Scanner</string>
    <string name="search_with_barcode_number">Search with barcode number</string>
    <string name="no_barcode_item">No Barcode Item</string>
    <string name="search_barcode">Search Barcode</string>
    <string name="enter_the_bar_code_number">Enter the bar code number</string>
    <string name="order_is_ready_for_pickup">Order is ready for pickup!</string>
    <string name="order_partially_n_completed">Order partially \n Completed</string>
    <string name="order_detail">Order Detail</string>
    <string name="avacado">Avacado</string>
    <string name="blend_43_decaf">Blend 43 Decaf</string>
    <string name="qty_2">Qty 2</string>
    <string name="scan_item_to_basket">Scan item to basket</string>
    <string name="finish_packaging">Finish Packaging</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="sales_data">Sales Data</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="log_out">Log Out</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="alert">Alert</string>
    <string name="logout_message1">Do you want to logout ?</string>
    <string name="dummy_data_avg">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="dummy_data_short">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="days">Days</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="manage_product_categories">Manage Product Categories</string>
    <string name="manage_individual_products">Manage Individual products</string>
    <string name="add_categories">Add Categories</string>
    <string name="select_categories">Select Categories</string>
    <string name="select">Select</string>
    <string name="enter_item">Enter Item</string>
    <string name="add_product">Add Product</string>
    <string name="add_photo">Add Photo</string>
    <string name="brand">Brand</string>
    <string name="add">Add</string>
    <string name="add_price">Add Price</string>
    <string name="product_name">Product Name</string>
    <string name="gtin_number">GTIN Number</string>
    <string name="non_bar_code_item">Non Bar Code Item</string>
    <string name="country_of_origin">Country of Origin</string>
    <string name="unit_of_measurement">Unit of measurement</string>
    <string name="unit_measurement">Unit Measurement</string>
    <string name="product_Description">Product Description</string>
    <string name="max_500_character">Max 500 Character</string>
    <string name="proceed_to_category">Proceed to Category</string>
    <string name="product">Product</string>
    <string name="lion_self_rashing_flour_2kg">Lion self Rashing flour 2kg</string>
    <string name="product_details">Product Details</string>
    <string name="product_code">Product Code</string>
    <string name="australia">Australia</string>
    <string name="price">Price</string>
    <string name="alegery_information">Alegery Information</string>
    <string name="description">Description</string>
    <string name="edit_price">Edit Price</string>
    <string name="delte">Delete</string>
    <string name="are_you_sure_want_you_want_to_delete_the_product">Are you sure you want to delete the product?</string>
    <string name="enter_price">Enter Price</string>
    <string name="submit">Submit</string>
    <string name="item_added_to_store">Item added to store!</string>
    <string name="search">Search</string>
    <string name="baby_products">Baby Products</string>
    <string name="product_categories">Product categories</string>
    <string name="drinks_amp_bevrages"><![CDATA[Drinks & Bevrages]]></string>
    <string name="available">Available</string>
    <string name="grocery">Grocery</string>
    <string name="add_products">Add Products</string>
    <string name="quantity_ordered">Quantity Ordered</string>
    <string name="package_item">Package Item</string>
    <string name="resend"><u>Resend</u></string>
    <string name="view_all"><u>View all</u></string>
    <string name="enter_name_for_the_new_list">Enter name for the new list</string>
    <string name="edit"><u>Edit</u></string>
    <string name="Take_Picture">Take Picture</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="enter_email">Enter email</string>
    <string name="no_internet">Please check your internet connection.</string>
    <string name="error_rating">Please rate this trait before submit.</string>
    <string name="error_image">Please select image</string>
    <string name="error_name">Please enter name</string>
    <string name="error_age">Please enter age</string>
    <string name="error_country_code">Please select country code</string>
    <string name="error_country">Please enter country</string>
    <string name="error_phone_number">Please enter phone number</string>
    <string name="error_invalid_phone_number">Please enter valid phone number</string>
    <string name="error_email">Please enter email</string>
    <string name="error_otp">Please enter OTP</string>
    <string name="error_validemail">Please enter valid email</string>
    <string name="error_validotp">Please enter valid OTP</string>
    <string name="error_password">Please enter password</string>
    <string name="error_cvv">Please enter CVV</string>
    <string name="error_transaction_id">Could not find transaction ID</string>
    <string name="error_trait_name">Please enter trait name</string>
    <string name="error_reason_toreport">Please mention the reason to report this user</string>
    <string name="error_user_id">User id not found</string>
    <string name="error_request_id">Request id not found</string>
    <string name="address_missing">Please enter the address</string>
    <string name="city_missing">Please enter city</string>
    <string name="state_missing">Please enter state</string>
    <string name="postal_code_missing">Please enter postal code</string>
    <string name="error_new_password">Please enter new password</string>
    <string name="error_cpassword">Please enter confirm password</string>
    <string name="error_password_length">Password length atleast 6 digit.</string>
    <string name="error_cvv_length">Please enter valid CVV number</string>
    <string name="error_trait_length">Trait name length should be atleast 3 </string>
    <string name="error_traitname_length">Trait name length atleast 3 characters.</string>
    <string name="error_cpassword_length">Confirm password length atleast 6 digit.</string>
    <string name="error_password_not_matched">Password doesn\'t matched</string>
    <string name="error_terms_conditions">Please accept terms &amp; conditions</string>
    <string name="permission">Please first turn on permission</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="enter_card_name">Enter card name</string>
    <string name="cardnumber_missing_message">Please enter card number</string>
    <string name="cardname_missing_message">Please enter card holder name</string>
    <string name="month_missing_message">Please enter expiry month</string>
    <string name="year_missing_message">Please enter expiry year</string>
    <string name="invalid_card_message">Please enter valid card number</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="write_something">Write something...</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="fb_app_id">195760838860848</string>
    <string name="no_list_available">No List Available</string>
    <string name="created_on">Created On: </string>
    <string name="no_card_available">No card available!</string>
    <string name="my_connections">My connections</string>
    <string name="find_new_connections">Find new connections</string>
    <string name="invite_friend_from_facebook">Invite Friend From Facebook</string>
    <string name="send_request">Send Request</string>
    <string name="select_default_card">Select Default Card</string>
    <string name="no_default_card_available">No Default Card Available!</string>
    <string name="add_and_select_default_card">Please add and select default card for payment</string>
    <string name="enter_trait_name">Enter trait name</string>
    <string name="messenger">Messenger</string>
    <string name="oldest">Oldest</string>
    <string name="error_bio">Please write something in bio</string>
    <string name="no_traits_found_in_list">No traits found in list</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="add_address">Add Address</string>
    <string name="no_card_list_available">No card list available</string>
    <string name="next">Next</string>
</resources>