<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/alert_dialog_shape">
                <TextView
                    android:id="@+id/camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:padding="10dp"
                    android:fontFamily="@font/avenier_roman"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:text="@string/Take_Picture"
                    android:textColor="@color/black"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <TextView
                android:id="@+id/gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="10dp"
                android:fontFamily="@font/avenier_roman"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"
                android:text="@string/gallery"
                android:textColor="@color/black"/>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:fontFamily="@font/avenier_roman"
            android:layout_marginTop="10dp"
            android:background="@drawable/alert_dialog_shape"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/red"
            android:text="@string/cancel"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>
