<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.activity.payment.AddCardDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:background="@drawable/small_header">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignParentLeft="true"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/regular"
                    android:text="Add Card"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/ivBar"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvEmail"
                    style="@style/CommonTextWrapcontent"
                    android:layout_below="@id/ivBar"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/et_card_name"
                    style="@style/Edittext"
                    android:layout_below="@id/tvEmail"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:maxLines="1"

                    android:hint="@string/enter_name"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/grey" />

                <TextView
                    style="@style/CommonTextWrapcontent"
                    android:layout_below="@id/ivBar"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Credit Card Number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <com.stripe.android.view.CardNumberEditText
                    android:id="@+id/et_card_number"
                    style="@style/EditextFieldwhit"
                    android:maxLength="19"
                    android:layout_below="@id/tvEmail"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/enter_card_number"
                    android:singleLine="true"
                    android:background="@drawable/shape"
                    android:inputType="number">
                </com.stripe.android.view.CardNumberEditText>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/CommonTextWrapcontent"
                            android:layout_below="@id/ivBar"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/expiry_date"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_expiry_month"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_45sdp"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:layout_weight="1"
                                android:background="@drawable/shape"
                                android:gravity="center_vertical"
                                android:hint="MM"
                                android:paddingLeft="15dp"
                                android:textColorHint="@color/grey"
                                android:textSize="16dp" />

                            <TextView
                                android:id="@+id/tv_expiry_year"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_45sdp"
                                android:layout_marginLeft="@dimen/_5sdp"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:layout_weight="1"
                                android:background="@drawable/shape"
                                android:gravity="center_vertical"
                                android:hint="YYYY"
                                android:paddingLeft="15dp"
                                android:textColorHint="@color/grey"
                                android:textSize="16dp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_weight="1.5"
                        android:orientation="vertical">

                        <TextView
                            style="@style/CommonTextWrapcontent"
                            android:layout_below="@id/ivBar"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="CVV"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/et_cvv"
                            style="@style/Edittext"
                            android:layout_below="@id/tvEmail"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:hint="CVV"
                            android:maxLines="1"
                            android:inputType="numberPassword"
                            android:maxLength="3"
                            android:textColorHint="@color/grey" />

                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btnSave"
                    style="@style/Button"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:text="Add" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>



</RelativeLayout>