<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.activity.address.AddressListActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/hedder"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:background="@drawable/small_header">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/regular"
                    android:text="@string/delivery_address"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/hedder"
                android:layout_above="@+id/tv_add_address"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/no_address_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/medium"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:text="@string/no_card_list_available"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />


                <!-- <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:contentPadding="@dimen/_10sdp"
                     app:cardCornerRadius="@dimen/_8sdp"
                     app:cardBackgroundColor="@color/colorPrimaryDark">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Default Address"
                                 android:drawableRight="@drawable/delete1"
                                 android:textColor="@color/white"
                                 android:drawableTint="@color/white"
                                 android:drawablePadding="@dimen/_5sdp">

                             </TextView>

                             <TextView
                                 android:id="@+id/tvedit"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:textColor="@color/white"
                                 android:gravity="end"
                                 android:textStyle="bold"
                                 android:text="@string/edit">

                             </TextView>
                         </LinearLayout>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="@color/white"
                             android:layout_marginTop="@dimen/_5sdp"
                             android:text="701, Block B-sidh markit pafharc chownk "
                             >

                         </TextView>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_5sdp"
                             android:textColor="@color/white"
                             android:text="Arizona, USA"
                             >

                         </TextView>

                     </LinearLayout>
                 </androidx.cardview.widget.CardView>


                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:contentPadding="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_20sdp"
                     app:cardCornerRadius="@dimen/_8sdp"
                    >
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Address 1"
                                 android:drawableRight="@drawable/delete1"
                                 android:drawableTint="@color/red"
                                 android:textColor="@color/black"
                                 android:drawablePadding="@dimen/_5sdp">

                             </TextView>

                             <TextView
                                 android:id="@+id/tvedit2"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:textColor="@color/black"
                                 android:gravity="end"
                                 android:textStyle="bold"
                                 android:text="@string/edit">

                             </TextView>
                         </LinearLayout>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="@color/black"
                             android:layout_marginTop="@dimen/_5sdp"
                             android:text="701, Block B-sidh markit pafharc chownk "
                             >

                         </TextView>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_5sdp"
                             android:textColor="@color/black"
                             android:text="Arizona, USA"
                             >

                         </TextView>

                     </LinearLayout>
                 </androidx.cardview.widget.CardView>-->

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_add_address"
                style="@style/CommonTextWrapcontent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/green_border_shape2"
                android:gravity="center"
                android:layout_above="@+id/btnnext"
                android:text="@string/add_address"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14sdp" />


            <Button
                android:id="@+id/btnnext"
                style="@style/Button"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/_20sdp"
                android:text="@string/next" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>